tests/fixtures/fail/region_static_redeclared.sali
let read('static: region)(value: i32): i32 = value
let main(): i32 = 42
